--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   </head>
   <body>
     <h1>Banana</h1>
+    <p>
+      Hello World!
+    </p>
   </body>
   <script src="js/main.js"></script>
 </html>
