--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p>
       Hello World!
     </p>
+    <img src="index.jpg" onclick="annoy()"/>
   </body>
   <script src="js/main.js"></script>
 </html>
